# epithema

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md
crates/emboss-cli/: Cargo.toml
crates/emboss-cli/src/: app.rs  commands.rs  error.rs  main.rs  output.rs
crates/emboss-config/: Cargo.toml
crates/emboss-config/src/: env.rs  lib.rs  paths.rs  policy.rs  provider.rs
crates/emboss-docgen/: Cargo.toml
crates/emboss-docgen/examples/: write_registry_autodoc_stubs.rs
crates/emboss-docgen/src/: acquisition.rs  contract.rs  emit.rs  error.rs  legacy.rs  lib.rs  process.rs  stub.rs  transform.rs  validate.rs
crates/emboss-docgen/tests/: contract_tests.rs  doc_coverage.rs
crates/emboss-docgen/tests/fixtures/: invalid_duplicate_artifact.json  minimal_autodoc.json  rich_autodoc.json
crates/emboss-io/: Cargo.toml
crates/emboss-io/src/: aligned_fasta.rs  embl.rs  error.rs  fasta.rs  fastq.rs  flatfile.rs  genbank.rs  lib.rs  stockholm.rs
crates/emboss-providers/: Cargo.toml
crates/emboss-providers/src/: acquisition.rs  archive.rs  capability.rs  client.rs  descriptor.rs  ena.rs  ena_archive.rs  identity.rs  lib.rs  ncbi.rs  registry.rs  sequence_retrieval.rs  sra_archive.rs  traits.rs
crates/emboss-r-bridge/: Cargo.toml
crates/emboss-r-bridge/src/: api.rs  conversion.rs  error.rs  health.rs  lib.rs  methods.rs  protocol.rs  types.rs  version.rs
crates/emboss-service/: Cargo.toml
crates/emboss-service/src/: acquisition.rs  archive_retrieval.rs  context.rs  error.rs  input.rs  lib.rs  registry.rs  request.rs  response.rs  result.rs  sequence_retrieval.rs  service.rs  tool.rs
crates/emboss-testkit/: Cargo.toml
crates/emboss-testkit/examples/: write_acceptance_anchor_reports.rs  write_cohort_health_report.rs  write_comparison_coverage_report.rs  write_cross_surface_fixtures.rs  write_full_compared_cohort_report.rs  write_governance_alignment_report.rs  write_harvest_coverage_report.rs  write_retained_backlog_report.rs  write_shipped_cohort_validation_report.rs
crates/emboss-testkit/src/: anchor.rs  cohort_health.rs  comparison_coverage.rs  cross_surface.rs  evidence.rs  full_compared_cohort.rs  governance.rs  harvest_coverage.rs  lib.rs  projection.rs  report.rs  retained_backlog.rs
crates/emboss-tools/: Cargo.toml
crates/emboss-tools/src/: lib.rs
crates/emboss-tools/src/alignment_analysis/: cons.rs  consambig.rs  distmat.rs  matcher.rs  mod.rs  shared.rs
crates/emboss-tools/src/alignment_tools/: aligncopy.rs  aligncopypair.rs  diffseq.rs  edialign.rs  extractalign.rs  infoalign.rs  mod.rs  nthseqset.rs  shared.rs
crates/emboss-tools/src/archive_tools/: assemblyget.rs  infoassembly.rs  mod.rs  runget.rs  runinfo.rs
crates/emboss-tools/src/codon_tools/: cai.rs  chips.rs  codcmp.rs  codcopy.rs  cusp.rs  mod.rs  shared.rs
crates/emboss-tools/src/command_tools/: mod.rs  seealso.rs  wossname.rs
crates/emboss-tools/src/feature_tools/: coderet.rs  extractfeat.rs  featcopy.rs  featmerge.rs  featreport.rs  feattext.rs  maskambignuc.rs  maskambigprot.rs  maskfeat.rs  maskseq.rs  mod.rs  render.rs  shared.rs  splitsource.rs  twofeat.rs
crates/emboss-tools/src/nucleotide_plots/: banana.rs  density.rs  isochore.rs  mod.rs  syco.rs  wobble.rs
crates/emboss-tools/src/pairwise_alignment/: mod.rs  needle.rs  needleall.rs  shared.rs  water.rs
crates/emboss-tools/src/pattern_tools/: dreg.rs  einverted.rs  exact_words.rs  (+13 more)
crates/epithema-cli/: Cargo.toml
crates/epithema-cli/src/: app.rs  commands.rs  error.rs  main.rs  output.rs
crates/epithema-config/: Cargo.toml
crates/epithema-config/src/: env.rs  lib.rs  paths.rs  policy.rs  provider.rs
crates/epithema-core/: Cargo.toml
crates/epithema-core/src/: alignment.rs  complexity.rs  error.rs  feature.rs  feature_ops.rs  global_alignment.rs  identifier.rs  interval.rs  lib.rs  molecule.rs  nucleotide_isochore.rs  nucleotide_syco.rs  platform.rs  protein_isoelectric.rs  protein_octanol.rs  revseq.rs  translation.rs
crates/epithema-diagnostics/: Cargo.toml
crates/epithema-diagnostics/src/: diagnostic.rs  error.rs  execution.rs  lib.rs  provenance.rs  report.rs
crates/epithema-docgen/: Cargo.toml
crates/epithema-docgen/examples/: write_registry_autodoc_stubs.rs
crates/epithema-docgen/src/: acquisition.rs  contract.rs  emit.rs  error.rs  legacy.rs  lib.rs  process.rs  stub.rs  transform.rs  validate.rs
crates/epithema-docgen/tests/: contract_tests.rs  doc_coverage.rs
crates/epithema-plot-contract/: Cargo.toml
crates/epithema-plot-contract/src/: facet.rs  lib.rs  metadata.rs
crates/epithema-plot-contract/tests/: contract.rs
crates/epithema-providers/: Cargo.toml
crates/epithema-providers/src/: acquisition.rs  archive.rs  capability.rs  client.rs  ena.rs  ena_archive.rs  ena_ngs.rs  identity.rs  input.rs  lib.rs  ncbi.rs  ngs.rs  registry.rs  request.rs  sequence_retrieval.rs  sra_archive.rs  sra_ngs.rs  traits.rs
crates/epithema-r-bridge/: Cargo.toml
crates/epithema-r-bridge/src/: api.rs  conversion.rs  lib.rs  methods.rs  protocol.rs  types.rs
crates/epithema-service/: Cargo.toml
crates/epithema-service/src/: acquisition.rs  archive_retrieval.rs  context.rs  error.rs  input.rs  input_resolution.rs  lib.rs  ngs_retrieval.rs  registry.rs  request.rs  response.rs  result.rs  sequence_retrieval.rs  service.rs  tool.rs
crates/epithema-testkit/: Cargo.toml
crates/epithema-testkit/examples/: write_acceptance_anchor_reports.rs  write_cohort_health_report.rs  write_comparison_coverage_report.rs  write_cross_surface_fixtures.rs  write_full_compared_cohort_report.rs  write_governance_alignment_report.rs  write_harvest_coverage_report.rs  write_retained_backlog_report.rs  write_shipped_cohort_validation_report.rs
crates/epithema-testkit/src/: anchor.rs  cohort_health.rs  comparison_coverage.rs  cross_surface.rs  evidence.rs  full_compared_cohort.rs  governance.rs  harvest_coverage.rs  lib.rs  projection.rs  report.rs  retained_backlog.rs
crates/epithema-tools/: Cargo.toml
crates/epithema-tools/src/: lib.rs
(+700 files in other folders)
