[workspace]
members = [
    "crates/emboss-cli",
    "crates/emboss-core",
    "crates/emboss-docgen",
    "crates/emboss-fixtures",
    "crates/emboss-io",
    "crates/emboss-plot-contract",
    "crates/emboss-r-bridge",
    "crates/emboss-service",
    "crates/emboss-testkit",
    "crates/emboss-tools",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/emboss-rs"
authors = ["Mnemosyne Biosciences Ltd"]
rust-version = "1.85"

[workspace.dependencies]
emboss-core = { path = "crates/emboss-core", version = "0.1.0" }
emboss-docgen = { path = "crates/emboss-docgen", version = "0.1.0" }
emboss-fixtures = { path = "crates/emboss-fixtures", version = "0.1.0" }
emboss-io = { path = "crates/emboss-io", version = "0.1.0" }
emboss-plot-contract = { path = "crates/emboss-plot-contract", version = "0.1.0" }
emboss-r-bridge = { path = "crates/emboss-r-bridge", version = "0.1.0" }
emboss-service = { path = "crates/emboss-service", version = "0.1.0" }
emboss-testkit = { path = "crates/emboss-testkit", version = "0.1.0" }
emboss-tools = { path = "crates/emboss-tools", version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
