[workspace]
members = [
    "crates/epithema-cli",
    "crates/epithema-config",
    "crates/epithema-core",
    "crates/epithema-diagnostics",
    "crates/epithema-docgen",
    "crates/epithema-fixtures",
    "crates/epithema-io",
    "crates/epithema-plot-contract",
    "crates/epithema-providers",
    "crates/epithema-r-bridge",
    "crates/epithema-service",
    "crates/epithema-testkit",
    "crates/epithema-tools",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sagrudd/epithema"
authors = ["Mnemosyne Biosciences Ltd"]
rust-version = "1.85"

[workspace.dependencies]
epithema-config = { path = "crates/epithema-config", version = "1.0.0" }
epithema-core = { path = "crates/epithema-core", version = "1.0.0" }
epithema-diagnostics = { path = "crates/epithema-diagnostics", version = "1.0.0" }
epithema-docgen = { path = "crates/epithema-docgen", version = "1.0.0" }
epithema-fixtures = { path = "crates/epithema-fixtures", version = "1.0.0" }
epithema-io = { path = "crates/epithema-io", version = "1.0.0" }
epithema-plot-contract = { path = "crates/epithema-plot-contract", version = "1.0.0" }
epithema-providers = { path = "crates/epithema-providers", version = "1.0.0" }
epithema-r-bridge = { path = "crates/epithema-r-bridge", version = "1.0.0" }
epithema-service = { path = "crates/epithema-service", version = "1.0.0" }
epithema-testkit = { path = "crates/epithema-testkit", version = "1.0.0" }
epithema-tools = { path = "crates/epithema-tools", version = "1.0.0" }
regex = "1.12.2"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
