[package]
name = "emboss-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Single-binary command-line entry point for EMBOSS-RS."

[dependencies]
emboss-service.workspace = true

[lints]
workspace = true

[[bin]]
name = "emboss-rs"
path = "src/main.rs"
