[package]
name = "emboss-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Typed platform configuration defaults and policy overrides for EMBOSS-RS."

[dependencies]
emboss-providers.workspace = true

[lints]
workspace = true
