[package]
name = "emboss-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Sequence file format parsing and writing for EMBOSS-RS."

[dependencies]
emboss-core.workspace = true

[lints]
workspace = true
