[package]
name = "emboss-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Modern provider abstractions and input-resolution contracts for EMBOSS-RS."

[dependencies]
emboss-diagnostics.workspace = true

[lints]
workspace = true
