[package]
name = "emboss-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Modern provider abstractions and input-resolution contracts for EMBOSS-RS."

[dependencies]
csv = "1.3"
emboss-core.workspace = true
emboss-diagnostics.workspace = true
emboss-io.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[lints]
workspace = true
