[package]
name = "emboss-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Execution and service-layer scaffolding for EMBOSS-RS."

[dependencies]
emboss-tools.workspace = true

[lints]
workspace = true
