[package]
name = "emboss-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Execution and service-layer scaffolding for EMBOSS-RS."

[dependencies]
emboss-config.workspace = true
emboss-core.workspace = true
emboss-diagnostics.workspace = true
emboss-plot-contract.workspace = true
emboss-providers.workspace = true
emboss-tools.workspace = true

[lints]
workspace = true
