[package]
name = "emboss-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Validation harness scaffolding for EMBOSS-RS."

[dependencies]
emboss-fixtures.workspace = true

[lints]
workspace = true
