[package]
name = "emboss-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Validation harness scaffolding for EMBOSS-RS."

[dependencies]
emboss-diagnostics.workspace = true
emboss-docgen.workspace = true
emboss-fixtures.workspace = true
emboss-io.workspace = true
emboss-r-bridge.workspace = true
emboss-service.workspace = true
emboss-tools.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
