[package]
name = "emboss-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tool descriptors and registry scaffolding for EMBOSS-RS."

[dependencies]
emboss-core.workspace = true

[lints]
workspace = true
