[package]
name = "epithema-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Foundational Epithema domain primitives and platform identity."

[dependencies]
epithema-diagnostics.workspace = true

[lints]
workspace = true
