[package]
name = "epithema-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared error, diagnostics, provenance, and execution reporting models for Epithema."

[lints]
workspace = true
