[package]
name = "epithema-docgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Documentation generation and autodoc scaffolding for Epithema."

[dependencies]
epithema-config.workspace = true
epithema-diagnostics.workspace = true
epithema-fixtures.workspace = true
epithema-providers.workspace = true
epithema-tools.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
