[package]
name = "epithema-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Modern provider abstractions and input-resolution contracts for Epithema."

[dependencies]
csv = "1.3"
epithema-core.workspace = true
epithema-diagnostics.workspace = true
epithema-io.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[lints]
workspace = true
