[package]
name = "epithema-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Validation harness scaffolding for Epithema."

[dependencies]
epithema-core.workspace = true
epithema-diagnostics.workspace = true
epithema-docgen.workspace = true
epithema-fixtures.workspace = true
epithema-io.workspace = true
epithema-plot-contract.workspace = true
epithema-r-bridge.workspace = true
epithema-providers.workspace = true
epithema-service.workspace = true
epithema-tools.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
