[package]
name = "epithema-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Tool descriptors and registry scaffolding for Epithema."

[dependencies]
epithema-core.workspace = true
epithema-diagnostics.workspace = true
epithema-io.workspace = true
epithema-plot-contract.workspace = true
regex.workspace = true

[lints]
workspace = true
